syntax = "proto3";

import '../game/game.packet.proto';

package common;

message GamePacket {
  oneof payload {
    C2S_PlayerMoveRequest playerMoveRequest = 1;
    S2C_PlayerMoveNotification playerMoveNotification = 2;
    C2S_GhostMoveRequest ghostMoveRequest = 3;
    S2C_GhostMoveNotification ghostMoveNotification = 4;
    S2C_PingRequest pingRequest = 5;
    C2S_PingResponse pingResponse = 6;
    C2S_PlayerStateChangeRequest playerStateChangeRequest = 7;
    S2C_PlayerStateChangeNotification playerStateChangeNotification = 8;
    C2S_GhostStateChangeRequest ghostStateChangeRequest = 9;
    S2C_GhostStateChangeNotification ghostStateChangeNotification = 10;
    C2S_ItemChangeRequest itemChangeRequest = 11;
    S2C_ItemChangeNotification itemChangeNotification = 12;

    C2S_PlayerAttackedRequest playerAttackedRequest = 101;
    S2C_PlayerLifeResponse playerLifeResponse = 102;
    C2S_LifeUpdateRequest lifeUpdateRequest = 103;

    C2S_GhostSpecialStateRequest ghostSpecialStateRequest = 201;
    S2C_GhostSpecialStateNotification ghostSpecialStateNotification = 202;
    C2S_GhostAttackedRequest ghostAttackedRequest = 203;
    C2S_GhostSpawnRequest ghostSpawnRequest = 204;
    S2C_GhostSpawnNotification ghostSpawnNotification = 205;
    S2C_GhostDeleteNotification ghostDeleteNotification = 206;

    C2S_ItemGetRequest itemGetRequest = 301;
    S2C_ItemGetResponse itemGetResponse = 302;
    S2C_ItemGetNotification itemGetNotification = 303;
    C2S_ItemUseRequest itemUseRequest = 304;
    S2C_ItemUseResponse itemUseResponse = 305;
    S2C_ItemUseNotification itemUseNotification = 306;
    C2S_ItemDiscardRequest itemDiscardRequest = 307;
    S2C_ItemDiscardResponse itemDiscardResponse = 308;
    S2C_ItemDiscardNotification itemDiscardNotification = 309;
    C2S_ItemDisuseRequest itemDisuseRequest = 310;
    S2C_ItemDisuseNotification itemDisuseNotification = 311;
    S2C_ItemDeleteNotification itemDeleteNotification = 312;
    C2S_ItemPurchaseRequest itemPurchaseRequest = 313;
    S2C_ItemPurchaseNotification itemPurchaseNotification = 314;
    S2C_ItemPurchaseResponse itemPurchaseResponse = 315;
    C2S_ItemCreateRequest itemCreateRequest = 316;
    S2C_ItemCreateNotification itemCreateNotification = 317;

    C2S_DoorToggleRequest doorToggleRequest = 350;
    S2C_DoorToggleNotification doorToggleNotification = 351;

    C2S_ExtractSoulRequest extractSoulRequest = 401;
    S2C_ExtractSoulNotification extractSoulNotification = 402;
    S2C_DisconnectPlayerNotification disconnectPlayerNotification = 403;
    S2C_RemainingTimeNotification remainingTimeNotification = 404;
    S2C_BlockInteractionNotification blockInteractionNotification = 405;
    C2S_StartStageRequest startStageRequest = 406;
    S2C_StartStageNotification startStageNotification = 407;
    S2C_StageEndNotification stageEndNotification = 408;
    S2C_SubmissionEndNotification submissionEndNotification = 409;
    C2S_DifficultySelectRequest difficultySelectRequest = 410; 
    S2C_DifficultySelectNotification difficultySelectNotification = 411;
    C2S_DisconnectRoomRequest disconnectRoomRequest = 412;
    S2C_KickRoomNotification kickRoomNotification = 413;

    C2S_RegistAccountRequest registAccountRequest = 500;
    S2C_RegistAccountResponse registAccountResponse = 501;
    C2S_LoginRequest loginRequest = 502;
    S2C_LoginResponse loginResponse = 503;
    C2S_ChangeNicknameRequest changeNicknameRequest = 504;
    S2C_ChangeNicknameResponse changeNicknameResponse = 505;
    C2S_EnterLobbyRequest enterLobbyRequest = 506;
    S2C_EnterLobbyResponse enterLobbyResponse = 507;
    C2S_WaitingRoomListRequest waitingRoomListRequest = 508;
    S2C_WaitingRoomListResponse waitingRoomListResponse = 509;

    C2S_CreateRoomRequest createRoomRequest = 601;
    S2C_CreateRoomResponse createRoomResponse = 602;
    C2S_JoinRoomRequest joinRoomRequest = 603;
    C2S_JoinRoomByGameSessionIdRequest joinRoomByGameSessionIdRequest = 604;
    S2C_JoinRoomResponse joinRoomResponse = 605;
    S2C_JoinRoomNotification joinRoomNotification = 606;
  }
}


message ServicePacket {
  oneof payload {
    ConnectServiceRequest connectServiceRequest = 1;
    ConnectedServiceNotification connectedServiceNotification = 2;
    DisconnectServiceRequest disconnectServiceRequest = 3;
    DisconnectedServiceNotification disconnectedServiceNotification = 4;
    CreateDedicatedRequest createDedicatedRequest = 5;
    ExitDedicatedRequestFromSocket exitDedicatedRequestFromSocket = 6;
    ConnectDedicatedRequest ConnectDedicatedRequest = 7;
    JoinDedicatedRequest joinDedicatedRequest = 8;
    UpdateRoomInfoRequest updateRoomInfoRequest = 9;
  }
}